Module 7/m07a01arrays-handout/grading/2024-10-21-15-23-16/compile.err
Test11.java:17: error: incompatible types: int[][] cannot be converted to int[]
        System.out.println(ArrayUtils.areEqual(arr1, arr2) ? "Yes" : "No");
                                               ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
